--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,12 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <!-- Additional customization for popups -->
+        <!-- For example: -->
+        <item name="android:background">@color/primary</item>
+        <item name="android:textColor">@color/primary_dark</item>
+    </style>
 
     <style name="Theme.BookAppAndroid" parent="Base.Theme.BookAppAndroid" />
 </resources>
